go back to ref instead of looking up arn att

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -238,10 +238,10 @@ Outputs:
     Export:
       Name: !Sub ${SecretsBase}-${AWS::Region}-SecretsKey
   SecretsInstanceDecryptPolicy:
-    Value: !GetAtt SecretsInstanceDecryptPolicy.Arn
+    Value: !Ref SecretsInstanceDecryptPolicy
     Export:
       Name: !Sub ${SecretsBase}-${AWS::Region}-SecretsInstanceDecryptPolicyArn
   SecretsInstanceAccessPolicy:
-    Value: !GetAtt SecretsInstanceAccessPolicy.Arn
+    Value: !Ref SecretsInstanceAccessPolicy
     Export:
       Name: !Sub ${SecretsBase}-${AWS::Region}-SecretsInstanceAccessPolicyArn
