Make Secrets stack export naming consistent with other exports

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -31,6 +31,7 @@ Metadata:
         Parameters:
           - InfrastructureStorageStackName
           - NotificationsStackName
+          - SecretsStackName
       - Label:
           default: GitHub API
         Parameters:
@@ -45,6 +46,8 @@ Metadata:
         default: Storage stack name
       NotificationsStackName:
         default: Notifications stack name
+      SecretsStackName:
+        default: Secrets stack name
       GitHubToken:
         default: Access token
       InfrastructureConfigStagingKey:
@@ -59,6 +62,10 @@ Parameters:
   NotificationsStackName:
     Default: infrastructure-notifications
     Description: The name of a previously launched notifications stack
+    Type: String
+  SecretsStackName:
+    Default: infrastructure-secrets
+    Description: The name of a previously launched secrets stack
     Type: String
   GitHubToken:
     Description: >
@@ -815,6 +822,7 @@ Resources:
                   {
                     "InfrastructureStorageStackName": "${InfrastructureStorageStackName}",
                     "NotificationsStackName": "${NotificationsStackName}",
+                    "SecretsStackName": "${SecretsStackName}",
                     "InfrastructureGitCommit": { "Fn::GetParam" : ["RepoStateArtifact", "state.json", "commit"]}
                   }
                 TemplateConfiguration: TemplateConfigStagingZipArtifact::staging.json
@@ -892,6 +900,7 @@ Resources:
                   {
                     "InfrastructureStorageStackName": "${InfrastructureStorageStackName}",
                     "NotificationsStackName": "${NotificationsStackName}",
+                    "SecretsStackName": "${SecretsStackName}",
                     "InfrastructureGitCommit": { "Fn::GetParam" : ["RepoStateArtifact", "state.json", "commit"]}
                   }
                 RoleArn: !GetAtt CloudFormationIAMRole.Arn
