--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -236,12 +236,12 @@ Outputs:
   SecretsKey:
     Value: !Ref SecretsKey
     Export:
-      Name: !Sub ${SecretsBase}-${AWS::Region}-SecretsKey
+      Name: !Sub ${AWS::StackName}-${AWS::Region}-SecretsKey
   SecretsInstanceDecryptPolicy:
     Value: !Ref SecretsInstanceDecryptPolicy
     Export:
-      Name: !Sub ${SecretsBase}-${AWS::Region}-SecretsInstanceDecryptPolicyArn
+      Name: !Sub ${AWS::StackName}-${AWS::Region}-SecretsInstanceDecryptPolicyArn
   SecretsInstanceAccessPolicy:
     Value: !Ref SecretsInstanceAccessPolicy
     Export:
-      Name: !Sub ${SecretsBase}-${AWS::Region}-SecretsInstanceAccessPolicyArn
+      Name: !Sub ${AWS::StackName}-${AWS::Region}-SecretsInstanceAccessPolicyArn
