--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -52,6 +52,8 @@ Parameters:
     Type: String
   NotificationsStackName:
     Type: String
+  SecretsStackName:
+    Type: String
   InfrastructureGitCommit:
     Type: String
   SecretsBase:
@@ -128,6 +130,7 @@ Resources:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         SecretsBase: !Ref SecretsBase
         SecretsRegion: !Ref SecretsRegion
+        SecretsStackName: !Ref SecretsStackName
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/ecs.yml"]]
       TimeoutInMinutes: "5"
   LoadBalancersStack:
