Refactor how SecretsBase is passed around

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -233,6 +233,10 @@ Resources:
       SourceAccount: !Ref "AWS::AccountId"
       SourceArn: !Sub "arn:aws:s3:::${SecretsBase}-${AWS::Region}-secrets"
 Outputs:
+  SecretsBase:
+    Value: !Ref SecretsBase
+    Export:
+      Name: !Sub ${AWS::StackName}-${AWS::Region}-SecretsBase
   SecretsKey:
     Value: !Ref SecretsKey
     Export:
