--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -37,7 +37,9 @@ Parameters:
     Type: String
   SecretsRegion:
     Type: String
-  SecretsStackName:
+  SecretsInstanceDecryptPolicyArn:
+    Type: String
+  SecretsInstanceAccessPolicyArn:
     Type: String
 Mappings:
   EnvironmentTypeMap:
@@ -159,10 +161,8 @@ Resources:
       Path: "/"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
-        - Fn::ImportValue:
-            !Sub "${SecretsStackName}-${SecretsRegion}-SecretsInstanceDecryptPolicyArn"
-        - Fn::ImportValue:
-            !Sub "${SecretsStackName}-${SecretsRegion}-SecretsInstanceAccessPolicyArn"
+        - !Ref SecretsInstanceDecryptPolicyArn
+        - !Ref SecretsInstanceAccessPolicyArn
   ECSInstanceProfile:
     Type: "AWS::IAM::InstanceProfile"
     Properties:
