Add Lambda permission for CloudWatch event trigger

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -817,6 +817,15 @@ Resources:
       Targets:
         - Arn: !GetAtt PipelineFailNotificationFunction.Arn
           Id: !Sub "${AWS::StackName}.FailureNotification-Poller"
+  # Lambda Permissions for CloudWatch Events
+  SchedulerEventInvokeFunctionPermission:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref PipelineFailNotificationFunction
+      Principal: events.amazonaws.com
+      SourceArn: !GetAtt FailureNotificationEventTrigger.Arn
+
   # Pipelines
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
