--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -230,7 +230,7 @@ Resources:
                 Resource:
                   - !Sub arn:aws:s3:::${ArtifactStore}/*
                   - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureConfigBucket", "/", !Ref InfrastructureConfigProductionKey]]
-        - PolicyName: SnsApprovalsPolicy
+        - PolicyName: SnsPolicy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -239,6 +239,7 @@ Resources:
                   - "sns:Publish"
                 Resource:
                   - !Ref DeployNotificationsSnsTopic
+                  - !Ref CodePipelineFailuresSnsTopic
         - PolicyName: CodePipelinePolicy
           PolicyDocument:
             Version: "2012-10-17"
