Clean up root stack parameters

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -236,16 +236,16 @@ Outputs:
   SecretsBase:
     Value: !Ref SecretsBase
     Export:
-      Name: !Sub ${AWS::StackName}-${AWS::Region}-SecretsBase
+      Name: !Sub ${AWS::StackName}-SecretsBase
   SecretsKey:
     Value: !Ref SecretsKey
     Export:
-      Name: !Sub ${AWS::StackName}-${AWS::Region}-SecretsKey
+      Name: !Sub ${AWS::StackName}-SecretsKey
   SecretsInstanceDecryptPolicy:
     Value: !Ref SecretsInstanceDecryptPolicy
     Export:
-      Name: !Sub ${AWS::StackName}-${AWS::Region}-SecretsInstanceDecryptPolicyArn
+      Name: !Sub ${AWS::StackName}-SecretsInstanceDecryptPolicyArn
   SecretsInstanceAccessPolicy:
     Value: !Ref SecretsInstanceAccessPolicy
     Export:
-      Name: !Sub ${AWS::StackName}-${AWS::Region}-SecretsInstanceAccessPolicyArn
+      Name: !Sub ${AWS::StackName}-SecretsInstanceAccessPolicyArn
