--- a/stacks/publish.prx.org.yml
+++ b/stacks/publish.prx.org.yml
@@ -42,8 +42,6 @@ Parameters:
     Type: String
   SecretsBase:
     Type: String
-  SecretsRegion:
-    Type: String
   # Shared ENV #################################################################
   # Publish ECS ################################################################
   PublishEcrImageTag:
@@ -221,7 +219,7 @@ Resources:
             - Name: AWS_SECRETS_VERSION
               Value: !Ref PublishSecretsVersion
             - Name: AWS_DEFAULT_REGION
-              Value: !Ref SecretsRegion
+              Value: !Ref AWS::Region
           Essential: true
           # TODO
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/publish.prx.org:${PublishEcrImageTag}
