--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -54,8 +54,6 @@ Parameters:
     Type: String
   SecretsStackName:
     Type: String
-  SecretsRegion:
-    Type: String
   InfrastructureGitCommit:
     Type: String
 Mappings:
@@ -120,16 +118,12 @@ Resources:
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-        SecretsRegion: !Ref SecretsRegion
-        SecretsBase:
-            Fn::ImportValue:
-              !Sub "${SecretsStackName}-${SecretsRegion}-SecretsBase"
         SecretsInstanceDecryptPolicyArn:
           Fn::ImportValue:
-            !Sub "${SecretsStackName}-${SecretsRegion}-SecretsInstanceDecryptPolicyArn"
+            !Sub "${SecretsStackName}-SecretsInstanceDecryptPolicyArn"
         SecretsInstanceAccessPolicyArn:
           Fn::ImportValue:
-            !Sub "${SecretsStackName}-${SecretsRegion}-SecretsInstanceAccessPolicyArn"
+            !Sub "${SecretsStackName}-SecretsInstanceAccessPolicyArn"
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/ecs.yml"]]
       TimeoutInMinutes: "5"
   LoadBalancersStack:
@@ -175,8 +169,7 @@ Resources:
         EcrRegion: !Ref EcrRegion
         SecretsBase:
             Fn::ImportValue:
-              !Sub "${SecretsStackName}-${SecretsRegion}-SecretsBase"
-        SecretsRegion: !Ref SecretsRegion
+              !Sub "${SecretsStackName}-SecretsBase"
         PublishEcrImageTag: !Ref PublishEcrImageTag
         PublishSecretsVersion: !Ref PublishSecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/publish.prx.org.yml"]]
@@ -209,8 +202,7 @@ Resources:
         EcrRegion: !Ref EcrRegion
         SecretsBase:
             Fn::ImportValue:
-              !Sub "${SecretsStackName}-${SecretsRegion}-SecretsBase"
-        SecretsRegion: !Ref SecretsRegion
+              !Sub "${SecretsStackName}-SecretsBase"
         CastleEcrImageTag: !Ref CastleEcrImageTag
         CastleSecretsVersion: !Ref CastleSecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/castle.prx.org.yml"]]
@@ -244,8 +236,7 @@ Resources:
         EcrRegion: !Ref EcrRegion
         SecretsBase:
             Fn::ImportValue:
-              !Sub "${SecretsStackName}-${SecretsRegion}-SecretsBase"
-        SecretsRegion: !Ref SecretsRegion
+              !Sub "${SecretsStackName}-SecretsBase"
         AudiogramEcrImageTag: !Ref AudiogramEcrImageTag
         AudiogramSecretsVersion: !Ref AudiogramSecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/audiogram.yml"]]
@@ -300,8 +291,7 @@ Resources:
         EcrRegion: !Ref EcrRegion
         SecretsBase:
             Fn::ImportValue:
-              !Sub "${SecretsStackName}-${SecretsRegion}-SecretsBase"
-        SecretsRegion: !Ref SecretsRegion
+              !Sub "${SecretsStackName}-SecretsBase"
         PlayEcrImageTag: !Ref PlayEcrImageTag
         PlaySecretsVersion: !Ref PlaySecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/play.prx.org.yml"]]
