--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -42,8 +42,6 @@ Parameters:
     Type: String
   SecretsBase:
     Type: String
-  SecretsRegion:
-    Type: String
   # Shared ENV #################################################################
   # Castle ECS #################################################################
   CastleEcrImageTag:
@@ -195,7 +193,7 @@ Resources:
             - Name: AWS_SECRETS_VERSION
               Value: !Ref CastleSecretsVersion
             - Name: AWS_DEFAULT_REGION
-              Value: !Ref SecretsRegion
+              Value: !Ref AWS::Region
           Essential: true
           # TODO
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/castle.prx.org:${CastleEcrImageTag}
