--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -42,8 +42,6 @@ Parameters:
     Type: String
   SecretsBase:
     Type: String
-  SecretsRegion:
-    Type: String
   # Shared ENV #################################################################
   # Play ECS ################################################################
   PlayEcrImageTag:
@@ -221,7 +219,7 @@ Resources:
             - Name: AWS_SECRETS_VERSION
               Value: !Ref PlaySecretsVersion
             - Name: AWS_DEFAULT_REGION
-              Value: !Ref SecretsRegion
+              Value: !Ref AWS::Region
           Essential: true
           # TODO
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/play.prx.org:${PlayEcrImageTag}
