Use prefix for secrets base name without region

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -14,7 +14,7 @@ Metadata:
         Parameters:
           - InfrastructureConfigStagingKey
           - InfrastructureConfigProductionKey
-          - SecretsBase
+          - SecretsBasePrefix
     ParameterLabels:
       InfrastructureStorageStackName:
         default: Storage stack name
@@ -24,8 +24,8 @@ Metadata:
         default: Staging S3 object key
       InfrastructureConfigProductionKey:
         default: Production S3 object key
-      SecretsBase:
-        default: Secrets base name
+      SecretsBasePrefix:
+        default: Secrets base name prefix (region is appended)
 Parameters:
   InfrastructureStorageStackName:
     Default: infrastructure-storage
@@ -47,7 +47,7 @@ Parameters:
       The S3 object key for the production template configuration file archive
       (.zip), inside the InfrastructureConfigBucket
     Type: String
-  SecretsBase:
+  SecretsBasePrefix:
     Default: prx-infrastructure
     Description: >
       Base string value for secrets resource names.
@@ -56,13 +56,13 @@ Resources:
   SecretsIAMGroup:
     Type: "AWS::IAM::Group"
     Properties:
-      GroupName: !Sub ${SecretsBase}-${AWS::Region}-manage-secrets
+      GroupName: !Sub ${SecretsBasePrefix}-${AWS::Region}-manage-secrets
       Path: "/"
       Policies:
-        - PolicyName: !Sub ${SecretsBase}-${AWS::Region}-encrypt-secrets
+        - PolicyName: !Sub ${SecretsBasePrefix}-${AWS::Region}-encrypt-secrets
           PolicyDocument:
             Version: "2012-10-17"
-            Id: !Sub key-${SecretsBase}-${AWS::Region}-secrets-encrypt-policy
+            Id: !Sub key-${SecretsBasePrefix}-${AWS::Region}-secrets-encrypt-policy
             Statement:
               - Effect: Allow
                 Action:
@@ -70,10 +70,10 @@ Resources:
                   - "kms:Decrypt"
                 Resource:
                   - !GetAtt SecretsKey.Arn
-        - PolicyName: !Sub ${SecretsBase}-${AWS::Region}-secrets-s3-read-write
+        - PolicyName: !Sub ${SecretsBasePrefix}-${AWS::Region}-secrets-s3-read-write
           PolicyDocument:
             Version: "2012-10-17"
-            Id: !Sub key-${SecretsBase}-${AWS::Region}-secrets-group-access-policy
+            Id: !Sub key-${SecretsBasePrefix}-${AWS::Region}-secrets-group-access-policy
             Statement:
               - Effect: Allow
                 Action:
@@ -81,11 +81,11 @@ Resources:
                   - "s3:GetObjectVersion"
                   - "s3:PutObject"
                 Resource:
-                  - !Sub arn:aws:s3:::${SecretsBase}-${AWS::Region}-secrets/*
+                  - !Sub arn:aws:s3:::${SecretsBasePrefix}-${AWS::Region}-secrets/*
   SecretsInstanceDecryptPolicy:
     Type: "AWS::IAM::ManagedPolicy"
     Properties:
-      ManagedPolicyName: !Sub key-${SecretsBase}-${AWS::Region}-secrets-instance-decrypt-policy
+      ManagedPolicyName: !Sub key-${SecretsBasePrefix}-${AWS::Region}-secrets-instance-decrypt-policy
       PolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -97,7 +97,7 @@ Resources:
   SecretsInstanceAccessPolicy:
     Type: "AWS::IAM::ManagedPolicy"
     Properties:
-      ManagedPolicyName: !Sub key-${SecretsBase}-${AWS::Region}-secrets-instance-access-policy
+      ManagedPolicyName: !Sub key-${SecretsBasePrefix}-${AWS::Region}-secrets-instance-access-policy
       PolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -106,7 +106,7 @@ Resources:
               - "s3:GetObject"
               - "s3:GetObjectVersion"
             Resource:
-              - !Sub arn:aws:s3:::${SecretsBase}-${AWS::Region}-secrets/*
+              - !Sub arn:aws:s3:::${SecretsBasePrefix}-${AWS::Region}-secrets/*
   SecretsKey:
     Type: "AWS::KMS::Key"
     Properties:
@@ -122,7 +122,7 @@ Resources:
   SecretsKeyAlias:
     Type: AWS::KMS::Alias
     Properties:
-      AliasName: !Sub alias/${SecretsBase}-${AWS::Region}-secrets
+      AliasName: !Sub alias/${SecretsBasePrefix}-${AWS::Region}-secrets
       TargetKeyId: !Ref SecretsKey
   SecretsLambdaExecutionIAMRole:
     Type: "AWS::IAM::Role"
@@ -154,7 +154,7 @@ Resources:
                   - "s3:GetObject"
                   - "s3:GetObjectVersion"
                 Resource:
-                  - !Sub arn:aws:s3:::${SecretsBase}-${AWS::Region}-secrets/*
+                  - !Sub arn:aws:s3:::${SecretsBasePrefix}-${AWS::Region}-secrets/*
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
   SecretsS3UpdateFunction:
@@ -214,7 +214,7 @@ Resources:
     DeletionPolicy: Retain
     DependsOn: SecretsBucketPermission
     Properties:
-      BucketName: !Sub ${SecretsBase}-${AWS::Region}-secrets
+      BucketName: !Sub ${SecretsBasePrefix}-${AWS::Region}-secrets
       Tags:
         - Key: Project
           Value: Infrastructure
@@ -231,10 +231,10 @@ Resources:
       FunctionName: !Ref SecretsS3UpdateFunction
       Principal: s3.amazonaws.com
       SourceAccount: !Ref "AWS::AccountId"
-      SourceArn: !Sub "arn:aws:s3:::${SecretsBase}-${AWS::Region}-secrets"
+      SourceArn: !Sub "arn:aws:s3:::${SecretsBasePrefix}-${AWS::Region}-secrets"
 Outputs:
   SecretsBase:
-    Value: !Ref SecretsBase
+    Value: !Sub ${SecretsBasePrefix}-${AWS::Region}
     Export:
       Name: !Sub ${AWS::StackName}-SecretsBase
   SecretsKey:
