leave in use output alone, add a new temp region secrets base

--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -234,9 +234,13 @@ Resources:
       SourceArn: !Sub "arn:aws:s3:::${SecretsBasePrefix}-${AWS::Region}-secrets"
 Outputs:
   SecretsBase:
-    Value: !Sub ${SecretsBasePrefix}-${AWS::Region}
+    Value: !Ref SecretsBasePrefix
     Export:
       Name: !Sub ${AWS::StackName}-SecretsBase
+  SecretsBaseRegion:
+    Value: !Sub ${SecretsBasePrefix}-${AWS::Region}
+    Export:
+      Name: !Sub ${AWS::StackName}-SecretsBaseRegion
   SecretsKey:
     Value: !Ref SecretsKey
     Export:
