New staging hostname

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -1089,7 +1089,7 @@ Resources:
           - Name: FEEDER_HOST
             Value: feeder-staging.prx.tech
           - Name: PUBLISH_HOST
-            Value: publish-staging.prx.tech
+            Value: publish.staging.prx.tech
           - Name: PUBLISH_USER
             Value: test@test.com
           - Name: PUBLISH_PASS
