--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -226,6 +226,7 @@ Resources:
       Period: "60"
       Statistic: Sum
       Threshold: "0"
+      TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
           Value: !Ref SnsOpsMessagesToSlackLambdaFunction
@@ -250,6 +251,7 @@ Resources:
       Period: "60"
       Statistic: Sum
       Threshold: "0"
+      TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
           Value: !Ref IkeCallbackHandlerLambdaFunction
