--- a/secrets/secrets.yml
+++ b/secrets/secrets.yml
@@ -206,6 +206,7 @@ Resources:
       Period: "60"
       Statistic: Sum
       Threshold: "0"
+      TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
           Value: !Ref SecretsS3UpdateFunction
