--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -373,6 +373,7 @@ Resources:
       Period: "60"
       Statistic: Sum
       Threshold: "0"
+      TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
           Value: !Ref GitHubWebhookEndpointLambdaFunction
@@ -400,6 +401,7 @@ Resources:
       Period: "60"
       Statistic: Sum
       Threshold: "0"
+      TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
           Value: !Ref GitHubEventHandlerLambdaFunction
@@ -427,6 +429,7 @@ Resources:
       Period: "60"
       Statistic: Sum
       Threshold: "0"
+      TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
           Value: !Ref CodeBuildCallbackHanlderLambdaFunction
