Add TreatMissingData to lambda alarms for Upload

--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -136,6 +136,7 @@ Resources:
       Period: "300"
       Statistic: Sum
       Threshold: "0"
+      TreatMissingData: notBreaching
       Dimensions:
         - Name: FunctionName
           Value: !Ref UploadLambdaFunction
