--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -2,6 +2,9 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates application load balancers that can be reused for multiple
   applications, using host- and path-based routing rules.
+Conditions:
+  CreateStagingResources: !Equals [!Ref EnvironmentType, Staging]
+  CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
 Parameters:
   EnvironmentType:
     Type: String
@@ -14,6 +17,8 @@ Parameters:
   VPCSubnet2:
     Type: "AWS::EC2::Subnet::Id"
   VPCCertificateArn:
+    Type: String
+  OpsErrorMessagesSnsTopicArn:
     Type: String
 Resources:
   PlatformSecurityGroup:
@@ -91,6 +96,32 @@ Resources:
       DefaultActions:
         - Type: forward
           TargetGroupArn: !Ref PlatformALBDefaultTargetGroup
+  # CloudWatch Alarms
+  CastleALBTargetGroup500Alarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Condition: CreateProductionResources
+    Properties:
+      ActionsEnabled: true
+      AlarmName: !Sub ${VPC} ALB HTTP 5XXs
+      AlarmActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      InsufficientDataActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      OKActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      AlarmDescription: >
+        5XX server errors originating from the ALB exceeded 0
+      ComparisonOperator: GreaterThanThreshold
+      EvaluationPeriods: "1"
+      MetricName: HTTPCode_ELB_5XX_Count
+      Namespace: AWS/ApplicationELB
+      Period: "60"
+      Statistic: Sum
+      Threshold: "0"
+      TreatMissingData: notBreaching
+      Dimensions:
+        - Name: LoadBalancer
+          Value: !GetAtt PlatformALB.LoadBalancerFullName
 Outputs:
   PlatformALBArn:
     Description: The ARN for the application load balancer
