Fix ALB alarm name

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -97,7 +97,7 @@ Resources:
         - Type: forward
           TargetGroupArn: !Ref PlatformALBDefaultTargetGroup
   # CloudWatch Alarms
-  CastleALBTargetGroup500Alarm:
+  PlatformALB500Alarm:
     Type: "AWS::CloudWatch::Alarm"
     Condition: CreateProductionResources
     Properties:
