Add castle TG ALB 5XX alarm

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -129,6 +129,9 @@ Outputs:
   PlatformALBDNSName:
     Description: The DNS name for the application load balancer
     Value: !GetAtt PlatformALB.DNSName
+  PlatformALBFullName:
+    Description: The full name for the application load balancer
+    Value: !GetAtt PlatformALB.LoadBalancerFullName
   PlatformALBCanonicalHostedZoneID:
     Description: The hosted zone ID for the application load balancer
     Value: !GetAtt PlatformALB.CanonicalHostedZoneID
