Add missing castle parameter

--- a/stacks/castle.prx.org.yml
+++ b/stacks/castle.prx.org.yml
@@ -36,6 +36,8 @@ Parameters:
   # Misc #######################################################################
   OpsDebugMessagesSnsTopicArn:
     Type: String
+  OpsErrorMessagesSnsTopicArn:
+    Type: String
   EnvironmentType:
     Type: String
   EnvironmentTypeAbbreviation:
