Rename alarm to avoid conflict

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -97,7 +97,7 @@ Resources:
         - Type: forward
           TargetGroupArn: !Ref PlatformALBDefaultTargetGroup
   # CloudWatch Alarms
-  PlatformALB500Alarm:
+  PlatformALB5XXAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Condition: CreateProductionResources
     Properties:
