Trying to fix alarms

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -102,7 +102,7 @@ Resources:
     Condition: CreateProductionResources
     Properties:
       ActionsEnabled: true
-      AlarmName: !Sub ${VPC} ALB HTTP 5XXs
+      AlarmName: !Sub ${VPC} ALB HTTP 5XX errors
       AlarmActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
