--- a/stacks/play.prx.org.yml
+++ b/stacks/play.prx.org.yml
@@ -16,6 +16,8 @@ Parameters:
   # Load Balancer ##############################################################
   PlatformALBDNSName:
     Type: String
+  PlatformALBFullName:
+    Type: String
   PlatformALBCanonicalHostedZoneID:
     Type: String
   PlatformALBHTTPListenerArn:
@@ -33,6 +35,8 @@ Parameters:
     Type: String
   # Misc #######################################################################
   OpsDebugMessagesSnsTopicArn:
+    Type: String
+  OpsErrorMessagesSnsTopicArn:
     Type: String
   EnvironmentType:
     Type: String
@@ -258,6 +262,34 @@ Resources:
           AliasTarget:
             DNSName: !Ref PlatformALBDNSName
             HostedZoneId: !Ref PlatformALBCanonicalHostedZoneID
+  # CloudWatch Alarms
+  PlayALBTargetGroup500Alarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Condition: CreateProductionResources
+    Properties:
+      ActionsEnabled: true
+      AlarmName: Play ALB Target Group HTTP 5XXs
+      AlarmActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      InsufficientDataActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      OKActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      AlarmDescription: >
+        5XX server errors originating from the play target group exceeded 0
+      ComparisonOperator: GreaterThanThreshold
+      EvaluationPeriods: "1"
+      MetricName: HTTPCode_Target_5XX_Count
+      Namespace: AWS/ApplicationELB
+      Period: "60"
+      Statistic: Sum
+      Threshold: "0"
+      TreatMissingData: notBreaching
+      Dimensions:
+        - Name: LoadBalancer
+          Value: !Ref PlatformALBFullName
+        - Name: TargetGroup
+          Value: !GetAtt PlayALBTargetGroup.TargetGroupFullName
 Outputs:
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
