Start on fourohfourstack

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -132,6 +132,9 @@ Outputs:
   PlatformALBFullName:
     Description: The full name for the application load balancer
     Value: !GetAtt PlatformALB.LoadBalancerFullName
+  PlatformALBDefaultTargetGroupArn:
+    Description: The ARN for the default target group
+    Value: !Ref PlatformALBDefaultTargetGroup
   PlatformALBCanonicalHostedZoneID:
     Description: The hosted zone ID for the application load balancer
     Value: !GetAtt PlatformALB.CanonicalHostedZoneID
