cleverly forgot to use the health check param

--- a/stacks/web-application.yml
+++ b/stacks/web-application.yml
@@ -69,7 +69,7 @@ Resources:
     Properties:
       HealthCheckIntervalSeconds: 60
       UnhealthyThresholdCount: 10
-      HealthCheckPath: /api/v1
+      HealthCheckPath: !Ref HealthCheckPath
       Name: !Sub ${AppName}-${EnvironmentTypeAbbreviation}-${VPC}
       Port: 80
       Protocol: HTTP
