missed a couple of things

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -77,6 +77,8 @@ Mappings:
       prefix: 10
     Play:
       prefix: 40
+    Crier:
+      prefix: 50
 Resources:
   VPCStack:
     Type: "AWS::CloudFormation::Stack"
@@ -349,7 +351,7 @@ Resources:
         PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
         PlatformALBHTTPListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPListenerArn
         PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
-        PlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Publish, prefix]
+        PlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Crier, prefix]
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
@@ -365,8 +367,8 @@ Resources:
         SecretsBase:
             Fn::ImportValue:
               !Sub "${SecretsStackName}-SecretsBaseRegion"
-        EcrImageTag: !Ref PublishEcrImageTag
-        SecretsVersion: !Ref PublishSecretsVersion
+        EcrImageTag: !Ref CrierEcrImageTag
+        SecretsVersion: !Ref CrierSecretsVersion
         AppName: "crier"
         CreateWorker: "true"
         ContainerPort: 3000
