--- a/stacks/web-application.yml
+++ b/stacks/web-application.yml
@@ -2,6 +2,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Web application with optional worker running in Docker
 Conditions:
   CreateWorkerResources: !Equals [!Ref CreateWorker, true]
+  CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
 Parameters:
   # VPC ########################################################################
   VPC:
@@ -35,12 +36,10 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
-  EcrRegion:
-    Type: String
   SecretsBase:
     Type: String
-  # Shared ENV #################################################################
-  # App ECS #################################################################
+  EcrRegion:
+    Type: String
   EcrImageTag:
     Type: String
   # App ENV #################################################################
@@ -123,7 +122,7 @@ Resources:
       Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, 03]]
   ALBTargetGroup500Alarm:
     Type: "AWS::CloudWatch::Alarm"
-    # Condition: CreateProductionResources
+    Condition: CreateProductionResources
     Properties:
       ActionsEnabled: true
       AlarmName: !Sub ${AppName} ALB Target Group HTTP 5XXs
@@ -181,6 +180,8 @@ Resources:
           PortMappings:
             - HostPort: 0
               ContainerPort: !Ref ContainerPort
+          Command:
+            - web
   WebService:
     Type: "AWS::ECS::Service"
     Properties:
@@ -190,7 +191,7 @@ Resources:
         MinimumHealthyPercent: 50
       DesiredCount: 2
       LoadBalancers:
-        - ContainerName: !Sub ${AppName}-container
+        - ContainerName: !Sub ${AppName}-web
           ContainerPort: !Ref ContainerPort
           TargetGroupArn: !Ref ALBTargetGroup
       Role: !Ref ECSServiceIAMRole
@@ -238,6 +239,8 @@ Resources:
               awslogs-region: !Ref AWS::Region
           Memory: !Ref ContainerMemory
           Name: !Sub ${AppName}-worker
+          Command:
+            - worker
   WorkerService:
     Condition: CreateWorkerResources
     Type: "AWS::ECS::Service"
@@ -249,7 +252,6 @@ Resources:
       DesiredCount: 1
       Role: !Ref ECSServiceIAMRole
       TaskDefinition: !Ref WorkerTaskDefinition
-      # TODO: set entry point to worker not web
 Outputs:
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
